--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JDFinance",
+  "name": "vproject",
   "version": "1.0.0",
   "description": "component with vue 2.5 and es6",
   "main": "index.js",
@@ -9,19 +9,11 @@
     "start": "webpack-dev-server --open",
     "build": "webpack --env.production"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@gitlab.com/imooc/vuejs.git"
-  },
   "keywords": [
     "es6",
     "component"
   ],
-  "author": "cuc_ygh@163.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://gitlab.com/imooc/vuejs/issues"
-  },
+
   "eslintConfig": {
     "root": true,
     "parserOptions": {
@@ -62,7 +54,6 @@
     "node_modules",
     "webpack.config.js"
   ],
-  "homepage": "https://gitlab.com/imooc/vuejs#README",
   "dependencies": {
     "clean-webpack-plugin": "^0.1.17",
     "css-hot-loader": "^1.3.4",
